--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-instant-markdown",
   "displayName": "Instant Markdown",
   "description": "Instant previews of your markdown files as you type.",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "publisher": "dbankier",
   "homepage": "https://github.com/dbankier/vscode-instant-markdown/blob/master/README.md",
   "repository": {
@@ -12,8 +12,12 @@
   "engines": {
     "vscode": "^1.1.37"
   },
-  "categories": ["Other"],
-  "activationEvents": ["onLanguage:markdown"],
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "onLanguage:markdown"
+  ],
   "contributes": {
     "commands": [
       {
@@ -82,6 +86,8 @@
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-lists": "^2.1.1",
     "opn": "^6.0.0",
+    "parseuri": "0.0.6",
+    "send": "^0.17.1",
     "socket.io": "^2.3.0"
   }
 }
